Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-41893

Desktop notifications sometimes cause a crash

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.5.0
    • 5.5.0
    • WebEngine
    • None
    • 38e68ab97b6de2f66bd367785d71831d9a154687 bc79678dfb91648d1d31b15732f31739abe5df55

    Description

      This happens whenever trello.com tries to show a desktop notification, but I couldn't reproduce it using normal HTML5 desktop notification examples around the web.

      It seems like RenderFrameHostImpl::OnCancelDesktopNotification calls the Callback regardless of if it's null or not, assuming that GetContentClient()>browser()>ShowDesktopNotification initialized cancel_callback, but the default implementation doesn't.

      Attachments

        For Gerrit Dashboard: QTBUG-41893
        # Subject Branch Project Status CR V

        Activity

          People

            mibrunin Michael Bruning
            jturcott Jocelyn Turcotte
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes