Do not allow desktop notifications

The default implementation of CheckDesktopNotificationPermission always
allows desktop notifications. Until we have implemented them we want
them always disabled. If we do not, we will end up with invalid
cancel notification Closures being called.

Task-number: QTBUG-41893
Change-Id: I609222d538ba6f3d1ac264eacd692211e4e653a7
Reviewed-by: Zeno Albisser <zeno.albisser@digia.com>